# HttpArena

./: .gitignore
frameworks/actix-websocket/: meta.json
frameworks/aspnet-websocket/: meta.json
frameworks/bun-websocket/: meta.json
frameworks/deno-websocket/: meta.json
frameworks/dogrider/: Dockerfile  Program.cs  README.md  meta.json  riderdog.csproj
frameworks/effinitive/: meta.json
frameworks/fleck/: Program.cs  meta.json
frameworks/genhttp-11/: Project.cs  genhttp.csproj  meta.json
frameworks/go-websocket/: meta.json
frameworks/helidon-production/: meta.json
frameworks/helidon-tuned/: meta.json
frameworks/hyperf/: meta.json
frameworks/ioxide/: ioxide-arena.csproj  meta.json
frameworks/lute/: meta.json
frameworks/minima-sync/: Dockerfile  Program.cs  README.md  meta.json  minima-sync.csproj
frameworks/minima-ws/: Dockerfile  Program.cs  README.md  meta.json  minima-ws.csproj
frameworks/node-websocket/: meta.json
frameworks/roadrunner/: README.md  meta.json  rebar.config
frameworks/roda/: app.rb
frameworks/simplew/: meta.json
frameworks/slimeweb/: meta.json
frameworks/spring-boot/: meta.json
frameworks/swerver/: Dockerfile
frameworks/swoole-websocket/: meta.json
frameworks/symfony-spawn-tas/: Dockerfile  composer.json
frameworks/tokio-ws/: Cargo.toml  Dockerfile  README.md  meta.json
frameworks/true-async-server/: Dockerfile  README.md  entry.php
frameworks/typev/: Dockerfile  meta.json
frameworks/userver/userver_benchmark/: CMakeLists.txt
frameworks/userver/userver_benchmark/schemas/: types.yaml
frameworks/userver/userver_benchmark/src/: dataset_provider.cpp  dataset_provider.hpp
frameworks/userver/userver_benchmark/src/handlers/json/: handler.cpp  handler.hpp
frameworks/workerman-websocket/: meta.json
frameworks/wtx-http2/: Cargo.toml  Dockerfile
frameworks/zix/: Dockerfile  build.zig  build.zig.zon  meta.json
frameworks/zix-grpc/: Dockerfile  build.zig  build.zig.zon  meta.json
scripts/: validate-ws.py  validate.sh
scripts/lib/: framework.sh  profiles.sh
(+85 files in other folders)
